# fpga_SpMV

./: .gitignore  README.md
.theia/: settings.json
.wsdata/: clang_dir_map.json
docs/: notes.txt
hls_component/: .gitignore  SpMV.cpp  SpMV.hpp  compile_commands.json  hls_config.cfg  input.txt  testbench.cpp  testcase.cpp
hls_component/.cache/clangd/index/: SpMV.c.9C30BD77796AB52B.idx  SpMV.cpp.5E9EEE374114C50D.idx  testbench.cpp.CD0E879928C7AC90.idx  testcase.cpp.20B549FF5DD7CDD0.idx
hls_component/hls_component/: hls_component.hlscompile_summary  hls_component.hlsrun_cosim_summary  hls_component.hlsrun_csim_summary  hls_component.hlsrun_package_summary
hls_component/hls_component/hls/: config.cmdline  hls_data.json
hls_component/hls_component/hls/.autopilot/: .autosim_exit
hls_component/hls_component/hls/.autopilot/db/: .message_cosim.xml  .message_csim.xml  .message_impl.xml  .message_syn.xml  SpMV.DependenceCheck.tcl  SpMV.adb  SpMV.adb.xml  SpMV.aemf  SpMV.bc  SpMV.bind.adb  SpMV.bind.adb.xml  SpMV.compgen.dataonly.tcl  SpMV.compgen.tcl  SpMV.constraint.tcl  SpMV.design.xml  SpMV.g.bc  SpMV.pp.0.cpp  (+200 more)
hls_component/hls_component/hls/.debug/: SpMV.protoinst
hls_component/hls_component/hls/impl/misc/drivers/SpMV_v1_0/src/: CMakeLists.txt  xspmv.c  xspmv.h  xspmv_hw.h
hls_component/hls_component/hls/sim/: .autosim.status
hls_component/hls_component/reports/: hls_compile.rpt  hls_cosim.rpt  v++_compile_hls_component_guidance.html
hls_component/hls_component/reports/.db/: v++_compile_hls_component_guidance.pb3
testcase_generator/: gen.py
(+267 files in other folders)
